# hrms-middleware-local-agent

./: .gitignore  1-CONFIGURE_SITE.cmd  2-INSTALL_FACTORY.cmd  3-CONFIGURE_DEVICE.cmd  4-CONFIGURE_LAN_IP.cmd  API_INTEGRATION_GUIDE.md  CHECK_STATUS.cmd  DEPLOY_NEW_SITE.cmd  Feature.md  INSTALL_ONE_CLICK.cmd  INSTALL_ONE_CLICK.ps1  MACHINE_DB_AND_MASTER_SCHEMAS.md  README.md  RECOVER_AFTER_NETWORK_CHANGE.cmd  RECREATE_CLOUDFLARE_TUNNEL.cmd  REPAIR_AUTOSTART.cmd  REPAIR_CLOUDFLARE.cmd  RESTART_STACK.cmd  RUNBOOK.md  SETUP_FACTORY_AUTOSTART.cmd  SETUP_NEW_PC.cmd  START_TUNNEL.cmd  START_TUNNEL_NOW.cmd  START_TUNNEL_QUICK.cmd  UNINSTALL_ONE_CLICK.cmd  UNINSTALL_ONE_CLICK.ps1  pyproject.toml  request_names.txt  更新记录.docx
SBXPC/: ReadMe.txt  Resource.h  SBXPC.def  SBXPC.idl  SBXPC.sln  SBXPC.vcxproj  SBXPCCtrl.h  SBXPC_i.c  SBXPCidl.h  dispids.h
configs/: dev.yaml  factory.yaml  integration.local.env.example  k95-vps.env.example  prod.yaml  site.local.yaml.example  stage.yaml
doc/: SBXPC Reference Manual.docx
docs/: CLEAN_INSTALL_FACTORY_PC.md  MACHINE_SETUP_AND_TESTING_GUIDE.md  MULTI_SITE_CONFIG.md  PRODUCTION_RESILIENCE.md  ROUTER_AND_LAN_IP_RECOVERY.md  SDK_CAPABILITY_MATRIX.md  SITE_PC_SETUP.md  V8_MANUAL_UAT_CHECKLIST.md  WHATSAPP_ALERTS.md
hrms-middleware-local-agent/: package-lock.json
scripts/: _check_db_88001.py  _io_mode_stats.py  _probe_erp_punch.py  _query_unsent_outbox.py  _recent_inout_summary.py  _test_disable_88001.py  backfill_outbox_from_glog.py  capture_k95_erp_investigation.py  check_outbox.py  check_stack_status.ps1  configure_device_stack.ps1  (+51 more)
(+711 files in other folders)
